--- a/index.html
+++ b/index.html
@@ -1,76 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>megamanyoutuber's Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
+
+  <style type="text/css" media="all">
+   @import "style.css";
+  </style>
+  <title>Ray's Personal Website</title>
 </head>
 
-<body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
-  
-<!-- Changing the font -->
-
-<!--<font face="Arial, sans-serif" size="+2">-->
-
-<!---->
-<center>
-<table border="2" cellpadding="2" cellspacing="2" style="font-size:14px;">
-<tr>
-<!-- Left header -->
-<td class="left-header" bgcolor="#965000" width="150" valign="top">
-<p>Pages</p>
-<a href="pages/posts.html">Posts</a><br>
-<a href="pages/guides.html">Guides</a><br>
-<p>Links:</p>
-<a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
-</td>
-<!-- End of left header -->
-
-<td class="content">
-<p>Welcome to my personal webpage!<br>
-What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
-<p>Mini-Posts<br>
-None</p>
-<!-- Me arguing stuff for no reason, not worth reading lol
-<p><b>June 4th 2022</b><br>
-Haven't updated this website in a while, haven't I? Sorry, but I didn't really have an opportunity to update this with anything. It's not like
-I can do much, I don't really have any ideas for now, so this website will stay like it is for now.
-</p>
-<p><b>March 4th 2022</b><br>
-In case you are worried about me, yes, I am STILL ALIVE.
-</p>
-<p><b>February 24th 2022</b><br>
-Current Russia-Ukraine stuff are getting scary, I'm worried on what will happen to me since I'm ukrainian. Today Russia
-invaded a few cities. Thankfully Russia didn't invade the city where I live. Now my school wlll be online, so I'll
-have more time towards this website and other stuff of mine, such as my YouTube channel which is beginning to become more
-popular now.
-</p>
-<p><b>February 15th 2022</b><br>
-I decided to give this website another redesign. Hopefully the pages will be better to read now. In addition this website
-will look better on lower resolution screens now.
-</p>
-<p><b>January 5th 2022</b><br>
-Wow. Turns out that Mozilla is also into Crypto, people went to your browser because it was the last sane browser, but Mozilla decided to treat us like that. Firefox was my first web browser, I had a lot of good memories with it. Welp it's time to switch to another web browser.
-Vivaldi, SeaMonkey maybe?
-</p>
-<p><b>November 12th 2021</b><br>
-Welp. from a <a href="https://www.ctrl.blog/entry/microsoft-edge-protocol-competition.html">page</a> that was shared by someone in one of Discord servers I use, looks like Microsoft is into forcing their web browser yet again. Good question is, Why??? I don't want Microsoft Edge at all, why can't Microsoft just let me use Firefox? Thanks god I'm on Windows 7 instead of Windows 11 Nickel. After seeing this being done by Microsoft, looks like I'll never ever install Windows 11 Nickel.
-</p>
-<p><b>October 18th 2021</b><br>
-Decided to update the design of this website to be something much more interesting, instead of plain old white background and black text.
-</p>
-<p><b>October 5th 2021</b><br>
-Windows 11 released? You mean it's 1 year anniversary of <a href="http://razorback95.com">Razorback</a>? Honestly I never understood the point of why people would support such a disaster called Windows 11, there are plenty of issues with it. UI based on electron, unstable, <b>retarded</b> system requirements. No. Don't even try to convince me those requirements are good, Microsoft has to understand that they will never make Windows <b>EVER</b> secure.<br>
-Oh, also sorry for not updating this website in a while.
-</p> -->
-</td>
-</tr>
-<!-- End of content -->
-<tr>
-<td colspan="2">
-<center>
-<a href="http://reimu.info"><img src="images/png/ezio.png"></img></a>
-<a href=http://leolaus.neocities.org><img src=https://leolaus.neocities.org/leosite.gif></a>
-</tr>
-</td>
-</table>
-<table border="2" cellpadding="2" cellspacing="2" style="font-size:14px;">
-</table>
-</center>
+<body>
+  <!-- Website DIVs
+   - Header
+   - Content
+   - Images
+  -->
+  <div class="website-container">
+    <div class="website-header">
+      <center>
+        <p>Pages</p>
+        <a href="pages/posts.html">Posts</a><br>
+        <a href="pages/guides.html">Guides</a><br>
+        <p>Links:</p>
+        <a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
+    </center>
+    </div>
+    <div class="website-content">
+      <p>Welcome to my personal webpage!<br>
+        What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
+        <p>Mini-Posts<br>
+        None</p>
+    </div>
+  </div>
 </body>
+
+</html>
