--- a/pages/guides.html
+++ b/pages/guides.html
@@ -1,29 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>megamanyoutuber's Guides</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
+
+    <style type="text/css" media="all">
+        @import "../style.css";
+    </style>
+    <title>megamanyoutuber's Guides</title>
 </head>
 
-<body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
-<center>
-<table border="2" cellpadding="2" cellspacing="2" style="font-size:14px;">
-<tr>
-<!-- Left header -->
-<td class="left-header" bgcolor="#965000" width="150" valign="top">
-<p>Pages</p>
-<a href=../index.html>Homepage</a><br>
-<a href="../pages/posts.html">Posts</a><br>
-<a href="../pages/guides.html">Guides</a><br>
-<p>Links:</p>
-<a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
-</td>
-<!-- End of left header -->
-
-<!-- Content -->
-<td class="content" valign="top">
-<p>Guides:</p>
-<p><a href="../guides/srvwks.html">Converting Windows Server for workstation use</a><br>
-</td>
-<!-- End of Content -->
-</tr>
-</table>
-</center>
+<body>
+    <!-- Website DIVs
+     - Header
+     - Content
+     - Images
+    -->
+    <div class="website-container">
+      <div class="website-header">
+        <center>
+            <p>Pages</p>
+            <a href=../index.html>Homepage</a><br>
+            <a href="../pages/posts.html">Posts</a><br>
+            <a href="../pages/guides.html">Guides</a><br>
+            <p>Links:</p>
+            <a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
+      </center>
+      </div>
+      <div class="website-content">
+            <p>Guides:</p>
+            <p><a href="../guides/srvwks.html">Converting Windows Server for workstation use</a></p>
+      </div>
+    </div>
 </body>
+</html>
