--- a/pages/posts.html
+++ b/pages/posts.html
@@ -1,47 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>RayZen's News</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
+
+    <style type="text/css" media="all">
+        @import "../style.css";
+    </style>
+    <title>RayZen's News</title>
 </head>
 
-<body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
-<center>
-<table border="2" cellpadding="2" cellspacing="2" style="font-size:14px;">
-<tr>
-<!-- Left header -->
-<td class="left-header" bgcolor="#965000" width="150" valign="top">
-<p>Pages</p>
-<a href=../index.html>Homepage</a><br>
-<a href="../pages/posts.html">Posts</a><br>
-<a href="../pages/guides.html">Guides</a><br>
-<p>Links:</p>
-<a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
-</td>
-<!-- End of left header -->
-
-<!-- Content -->
-<td class="content" valign="top">
-My Software:<br>
-<p>Any posts here are related to my software, games and anything similar.<br>
-N/A
-</p>
-Software:<br>
-<p>Any posts here are related to software, games and anything similar.<br>
-<a href="../posts/xp2003.html">Windows XP/Server 2003 Tips, Tweaks, and etc.</a><br>
-<a href="../posts/chromexp.html">Chromium 108 on Windows XP [22.12.2022]</a><br>
-<a href="../posts/win81.html">Why Windows 8.1 is the best [26.12.2022]</a>
-</p>
-Personal:<br>
-<p>Any posts here are related to my own personal life.<br>
-<a href="../posts/return.html">It has been a while... [22.12.2022]</a>
-</p>
-<p>
-Resources:<br>
-</p>
-<p>Any posts here are related to getting resources, links, etc.<br>
-N/A
-</p>
-</td>
-<!-- End of content -->
-</tr>
-</table>
-</center>
+<body>
+    <!-- Website DIVs
+     - Header
+     - Content
+     - Images
+    -->
+    <div class="website-container">
+      <div class="website-header">
+        <center>
+            <p>Pages</p>
+            <a href=../index.html>Homepage</a><br>
+            <a href="../pages/posts.html">Posts</a><br>
+            <a href="../pages/guides.html">Guides</a><br>
+            <p>Links:</p>
+            <a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
+        </center>
+      </div>
+      <div class="website-content">
+        <p>My Software:</p>
+        <p>Any posts here are related to my software, games and anything similar.<br>
+        N/A
+        </p>
+        <p>Software:</p>
+        <p>Any posts here are related to software, games and anything similar.<br>
+        <a href="../posts/chromexp.html">Chromium 108 on Windows XP [22.12.2022]</a><br>
+        <a href="../posts/win81.html">Why Windows 8.1 is the best [26.12.2022]</a>
+        </p>
+        <p>Personal:</p>
+        <p>Any posts here are related to my own personal life.<br>
+        <a href="../posts/return.html">It has been a while... [22.12.2022]</a>
+        </p>
+        <p>
+        Resources: </p>
+        <p>Any posts here are related to getting resources, links, etc.<br>
+        N/A
+        </p>
+      </div>
+    </div>
 </body>
