--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <a href="pages/posts.html">Posts</a><br>
         <a href="pages/guides.html">Guides</a><br>
         <p>Links:</p>
-        <a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
+        <a href="https://discord.gg/xDdWNpGeq8">Discord</a>
+		<br><br>
+		<a href="http://leolaus.neocities.org" target="_blank"><img src="images/gif/leosite.gif" width="88" height="31" alt="leolaus"></a>
+		<a href="http://tijon.neocities.org" target="_blank"><img src="images/gif/tijonerybanner.gif" alt="tijon" width="88" height="31"></a>
     </center>
     </div>
     <div class="website-content">
