--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <div class="website-content">
       <p>Welcome to my personal webpage!<br>
         What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
-        <p>Mini-Posts<br>
-        None</p>
+        <h2>Mini-Posts</h2>
+        <p>05.06.2023<br>
+        If you have noticed my inactivity on my Discord account, it is due to that my account got deactivated for being "under 13". I have currently made an appeal, and I hope that my account will be unbanned!
+        </p>
     </div>
   </div>
 </body>
