--- a/index.html
+++ b/index.html
@@ -36,8 +36,15 @@
       <p>Welcome to my personal webpage!<br>
         What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
         <h2>Mini-Posts</h2>
-        <p>05.06.2023<br>
-        If you have noticed my inactivity on my Discord account, it is due to that my account got deactivated for being "under 13". I have currently made an appeal, and I hope that my account will be unbanned!
+        
+        <h3>08.06.2023</h3>
+        <p>
+          Good news, my Discord account has unbanned. It took a few days for Discord to actually unban my account, however I can finally use my account!
+        </p>
+
+        <h3>05.06.2023</h3>
+        <p>
+          If you have noticed my inactivity on my Discord account, it is due to that my account got deactivated for being "under 13". I have currently made an appeal, and I hope that my account will be unbanned!
         </p>
     </div>
   </div>
