Changed my website's design yet again

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
         <h2>Mini-Posts</h2>
         
+        <h3>21.04.2024</h3>
+        <p>
+          Just revamped (once again) my website's design, I personally think this one is the best I've ever done yet. Wondering what y'all's reaction will be!
+        </p>
+        
         <h3>08.06.2023</h3>
         <p>
           Good news, my Discord account has unbanned. It took a few days for Discord to actually unban my account, however I can finally use my account!
