--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         <a href="pages/guides.html">Guides</a><br>
         <p>Links:</p>
         <a href="https://discord.gg/xDdWNpGeq8">Discord</a>
+        <a href="https://youtube.com/@rayzen_undogen">YouTube</a>
 		<br><br>
-		<a href="http://leolaus.neocities.org" target="_blank"><img src="images/gif/leosite.gif" width="88" height="31" alt="leolaus"></a>
 		<a href="http://tijon.neocities.org" target="_blank"><img src="images/gif/tijonerybanner.gif" alt="tijon" width="88" height="31"></a>
+		<a href="https://devdotzip.neocities.org"><img src="https://devdotzip.neocities.org/images/88x31button.png"></a>
+		<a href="https://swg.neocities.org"><img src="images/png/swgneocitiesorg.png"></a>
     </center>
     </div>
     <div class="website-content">
