added a new page about me putting my video series on a hiatus

--- a/pages/posts.html
+++ b/pages/posts.html
@@ -45,7 +45,8 @@
         <p>Personal:</p>
         <p>Any posts here are related to my own personal life.<br>
         <a href="../posts/return.html">It has been a while... [22.12.2022]</a><br>
-        <a href="../posts/youtube.html">My videos and their future [23.09.2023]</a>
+        <a href="../posts/youtube.html">My videos and their future [23.09.2023]</a><br>
+        <a href="../posts/hiatusyoutube.html">Video series on a hiatus [02.06.2024]</a>
         </p>
         
         <p>
