--- a/pages/guides.html
+++ b/pages/guides.html
@@ -10,7 +10,7 @@
     <style type="text/css" media="all">
         @import "../style.css";
     </style>
-    <title>megamanyoutuber's Guides</title>
+    <title>RayZen's Guides</title>
 </head>
 
 <body>
