--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style type="text/css" media="all">
    @import "style.css";
   </style>
-  <title>Ray's Personal Website</title>
+  <title>Ivy's Personal Website</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         <a href="pages/guides.html">Guides</a><br>
         <p>Links:</p>
         <a href="https://discord.gg/xDdWNpGeq8">Discord</a>
-        <a href="https://youtube.com/@rayzen_undogen">YouTube</a>
+        <a href="https://youtube.com/@ivyflow3r">YouTube</a>
 		<br><br>
 		<a href="http://tijon.neocities.org" target="_blank"><img src="images/gif/tijonerybanner.gif" alt="tijon" width="88" height="31"></a>
 		<a href="https://devdotzip.neocities.org"><img src="https://devdotzip.neocities.org/images/88x31button.png"></a>
