added music onto the navbar, along with some other minor fixes

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Ivy's Personal Webpage - About me</title>
+    <title>Ivy's Personal Webpage - About Me</title>
 
     <!-- Using the older method for compatibility -->
     <style type="text/css" media="all">
@@ -11,57 +11,60 @@
     </style>
 </head>
 <body>
-    <header>
-        <nav>
-          <ul>
-            <li id="logo">
-              ivyflow3r
-            </li>
-            <li>
-              <a href="../index.html">home</a>
-            </li>
-            <li>
-              <a href="posts.html">posts</a>
-            </li>
-            <li>
-              <a href="guides.html">guides</a>
-            </li>
-            <li>
-              <a href="aboutme.html">about me</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
+  <header>
+    <nav>
+      <ul>
+        <li id="logo">
+          ivyflow3r
+        </li>
+        <li>
+          <a href="../index.html">home</a>
+        </li>
+        <li>
+          <a href="posts.html">posts</a>
+        </li>
+        <li>
+          <a href="guides.html">guides</a>
+        </li>
+        <li>
+          <a href="music.html">music</a>
+        </li>
+        <li>
+          <a href="aboutme.html">about me</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-      <main>
-        <h1>About me</h1>
-        
-        <!-- ya girl's ass is too lazy to actually do it properly -->
-        <center><img src="../images/ivy_image_radiohead.png"></center>
+  <main>
+    <h1>About Me</h1>
+    
+    <!-- ya girl's ass is too lazy to actually do it properly -->
+    <center><img src="../images/ivy_image_radiohead.png"></center>
 
-        <p>
-            Oh, well hello there. If you came here, you may or may not know me, or if you do, you only briefly know me and want to learn more about me in general. You may know me for a lot of things, such as my YouTube videos or my presence on whatever Discord server you are on.
-        </p>
+    <p>
+        Oh, well hello there. If you came here, you may or may not know me, or if you do, you only briefly know me and want to learn more about me in general. You may know me for a lot of things, such as my YouTube videos or my presence on whatever Discord server you are on.
+    </p>
 
-        <p>
-            My name is Sonja, online usually known as ivyflow3r (pronounced as ivy flower). I have used other usernames before but I am currently only under this alias, so please to refer me as either Sonja or ivyflow3r, thank you.
-        </p>
+    <p>
+        My name is Sonja, online usually known as ivyflow3r (pronounced as ivy flower). I have used other usernames before but I am currently only under this alias, so please to refer me as either Sonja or ivyflow3r, thank you.
+    </p>
 
-        <p>
-            My primary interests are old tech, Mega Man, Nine Inch Nails, Radiohead and etc. You may know that already though considering how often I talk about stuff that I like, especially on servers that I am active on.
-        </p>
+    <p>
+        My primary interests are old tech, Mega Man, Nine Inch Nails, Radiohead and etc. You may know that already though considering how often I talk about stuff that I like, especially on servers that I am active on.
+    </p>
 
-        <p>
-            I am from Ukraine and I am currently residing in The Netherlands, and yes I am fine.
-        </p>
+    <p>
+        I am from Ukraine and I am currently residing in The Netherlands, and yes I am fine.
+    </p>
 
-        <p>
-            Languages (from best to worst): Ukrainian (Native), English, Dutch, Russian, German
-        </p>
+    <p>
+        Languages (from best to worst): Ukrainian (Native), English, Dutch, Russian, German
+    </p>
 
-        <p class="small">
-            and yes, if you're wondering, this website's design is inspired by radiohead's ok computer
-        </p>
-      </main>
+    <p class="small">
+        and yes, if you're wondering, this website's design is inspired by radiohead's ok computer
+    </p>
+  </main>
 </body>
 </html>
