--- a/pages/music.html
+++ b/pages/music.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ivy's Personal Webpage - Music</title>
 
     <style type="text/css" media="all">
         @import "../styles/style.css";
     </style>
-    <title>Ivy's Personal Webpage - Posts</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
           <a href="guides.html">guides</a>
         </li>
         <li>
-          <a href="guides.html">music</a>
+          <a href="music.html">music</a>
         </li>
         <li>
           <a href="aboutme.html">about me</a>
