--- a/pages/srvwks.html
+++ b/pages/srvwks.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Ivy's Personal Webpage - Converting Windows Server for workstation use</title>
+
     <style type="text/css" media="all">
       @import "../styles/style.css";
     </style>
@@ -24,6 +24,9 @@
           </li>
           <li>
             <a href="guides.html">guides</a>
+          </li>
+          <li>
+            <a href="music.html">music</a>
           </li>
           <li>
             <a href="aboutme.html">about me</a>
