--- a/pages/chromexp.html
+++ b/pages/chromexp.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ivy's Personal Webpage - Chromium 108 on Windows XP</title> 
 
   <style type="text/css" media="all">
    @import "../styles/style.css";
   </style>
-  <title>Ivy's Personal Webpage - Chromium 108 on Windows XP!</title> 
 </head>
 
 <body>
@@ -26,6 +26,9 @@
         </li>
         <li>
           <a href="guides.html">guides</a>
+        </li>
+        <li>
+          <a href="music.html">music</a>
         </li>
         <li>
           <a href="aboutme.html">about me</a>
