--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ Don't expect it to work everywhere, especially since GitHub requires TLS 1.2
             <a href="pages/guides.html">guides</a>
           </li>
           <li>
+            <a href="pages/music.html">music</a>
+          </li>
+          <li>
             <a href="pages/aboutme.html">about me</a>
           </li>
         </ul>
