forgot to add the link to music here

--- a/pages/posts.html
+++ b/pages/posts.html
@@ -27,6 +27,9 @@
           <a href="guides.html">guides</a>
         </li>
         <li>
+          <a href="music.html">music</a>
+        </li>
+        <li>
           <a href="aboutme.html">about me</a>
         </li>
       </ul>
