fixed a grammatical mistake
thanks to mahbubabrar767 on discord for mentioning it

--- a/pages/win81.html
+++ b/pages/win81.html
@@ -74,7 +74,7 @@
     support Compatibility Support Module. UefiSeven does exist, but it does not work for
     everybody and it's still a pain in the ass compared to Windows 8.1.</p>
   
-    <p>Speed is also so good in Windows 8.1, in some cases it feels faster than Windosw 7 does
+    <p>Speed is also so good in Windows 8.1, in some cases it feels faster than Windows 7 does
     on the same hardware. Even on a really customized version of Windows 8.1 that I am using.</p>
   
     <p>And if you are still mad at the start screen or the interface, just use Open-Shell and a
