fixed page's name

--- a/pages/srvwks.html
+++ b/pages/srvwks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ivy's Personal Webpage - Converting Windows Server for workstation use</title>
+    <title>Ivy's Personal Webpage - Converting Windows Server into a Workstation OS</title>
 
     <style type="text/css" media="all">
       @import "../styles/style.css";
