--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -47,7 +47,7 @@
     </p>
 
     <p>
-        My name is Sonja, online usually known as ivyflow3r (pronounced as ivy flower). I have used other usernames before but I am currently only under this alias, so please to refer me as either Sonja or ivyflow3r, thank you.
+        My name is Sonia, online usually known as ivyflow3r (pronounced as ivy flower). I have used other usernames before but I am currently only under this alias, so please to refer me as either Sonja or ivyflow3r, thank you.
     </p>
 
     <p>
